--- a/default.scss
+++ b/default.scss
@@ -6,16 +6,13 @@ body {
 	background-position: 0 0;
 }
 .content {
-	color: #fff;
-	background: #3f4551;
+	color: #3f4551;
+	background: #fff;
 	margin: 0 auto;
 	width: 930px;
 }
 
 .entry-content {
-	a {
-		color: #fff;
-	}
 	width: 730px;
 	margin: 0 auto;
 
@@ -74,6 +71,31 @@ body {
 		text-align: right;
 		font-size: 0.9em;
 		color: rgb(159, 74, 237);
+	}
+
+	ul,
+	ol {
+		color: rgb(159, 74, 237);
+		border-top: solid rgb(159, 74, 237) 1px; /*上のボーダー*/
+		border-bottom: solid rgb(159, 74, 237) 1px; /*下のボーダー*/
+		padding: 0.5em 0 0.5em 1.5em;
+	}
+
+	ul li,
+	ol li {
+		line-height: 1.5;
+		padding: 0.5em 0;
+	}
+
+	ul li a,
+	ol li a {
+		color: rgb(159, 74, 237);
+	}
+
+	#index-list {
+		h4 {
+			color: rgb(159, 74, 237);
+		}
 	}
 }
 
