--- a/default.scss
+++ b/default.scss
@@ -1,21 +1,6 @@
 /* はてなブログのデザインcss */
-body {
-	background-image: url(https://cdn.blog.st-hatena.com/images/theme/backgrounds/2014/pixel-01@2x.png?version=b0f69bbd0bdeff995d71c167fc8b252679abb18e&env=production);
-	background-repeat: repeat;
-	background-attachment: scroll;
-	background-position: 0 0;
-}
-.content {
-	color: #3f4551;
-	background: #fff;
-	margin: 0 auto;
-	width: 930px;
-}
 
 .entry-content {
-	width: 730px;
-	margin: 0 auto;
-
 	.official-anchor {
 		margin: 20px auto;
 		display: block;
@@ -92,39 +77,31 @@ body {
 		color: rgb(159, 74, 237);
 	}
 
+	dl {
+		margin: 0 auto;
+		display: flex;
+		flex-wrap: wrap;
+		border-spacing: 0;
+	}
+
+	dl dt {
+		width: 30%;
+		color: rgb(159, 74, 237);
+		border-bottom: solid 1px rgb(159, 74, 237);
+		padding: 10px 0;
+	}
+
+	dl dd {
+		margin: 0;
+		width: 70%;
+		border-bottom: solid 1px #ddd;
+		text-align: center;
+		padding: 10px 0;
+	}
+
 	#index-list {
 		h4 {
 			color: rgb(159, 74, 237);
 		}
-	}
-}
-
-h1 {
-	font-size: 3.052rem;
-}
-h2 {
-	font-size: 2.441rem;
-}
-h3 {
-	font-size: 1.953rem;
-}
-h4 {
-	font-size: 1.563rem;
-}
-h5 {
-	font-size: 1.25rem;
-}
-
-p {
-	font-size: 1rem;
-}
-
-@media screen and (max-width: 750px) {
-	.content {
-		overflow: hidden;
-		width: 100%;
-	}
-	.entry-content {
-		width: 100%;
 	}
 }
