--- a/2021-05/css/suiyoubino_neko.css
+++ b/2021-05/css/suiyoubino_neko.css
@@ -128,4 +128,21 @@
 .entry-content #advertising .advertising-list div {
   margin: 5px;
 }
-/*# sourceMappingURL=default.css.map */
+
+.entry-content #mainvisual img {
+  width: 100%;
+}
+
+.entry-content h4::before {
+  margin-right: 10px;
+  content: "";
+  width: 4rem;
+  /*画像の幅*/
+  height: 4rem;
+  /*画像の高さ*/
+  display: inline-block;
+  background: url("../images/icon.png") no-repeat;
+  background-size: contain;
+  vertical-align: middle;
+}
+/*# sourceMappingURL=suiyoubino_neko.css.map */
