--- a/privacy-policy.css
+++ b/privacy-policy.css
@@ -1,22 +1,7 @@
 @charset "UTF-8";
 /* はてなブログのデザインcss */
-body {
-  background-image: url(https://cdn.blog.st-hatena.com/images/theme/backgrounds/2014/pixel-01@2x.png?version=b0f69bbd0bdeff995d71c167fc8b252679abb18e&env=production);
-  background-repeat: repeat;
-  background-attachment: scroll;
-  background-position: 0 0;
-}
-
-.content {
-  color: #3f4551;
-  background: #fff;
-  margin: 0 auto;
-  width: 930px;
-}
-
-.entry-content {
-  width: 730px;
-  margin: 0 auto;
+.entry-content #mainvisual img {
+  width: 100%;
 }
 
 .entry-content .official-anchor {
@@ -37,7 +22,7 @@ body {
           align-items: center;
   text-decoration: none;
   width: 70%;
-  height: 40px;
+  padding: 10px 0;
   background: #9f4aed;
   color: #fff;
 }
@@ -107,42 +92,45 @@ body {
   color: #9f4aed;
 }
 
+.entry-content dl {
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  border-spacing: 0;
+}
+
+.entry-content dl dt {
+  width: 30%;
+  color: #9f4aed;
+  border-bottom: solid 1px #9f4aed;
+  padding: 10px 0;
+}
+
+.entry-content dl dd {
+  margin: 0;
+  width: 70%;
+  border-bottom: solid 1px #ddd;
+  text-align: center;
+  padding: 10px 0;
+}
+
 .entry-content #index-list h4 {
   color: #9f4aed;
 }
 
-h1 {
-  font-size: 3.052rem;
+.entry-content #advertising .advertising-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
-h2 {
-  font-size: 2.441rem;
-}
-
-h3 {
-  font-size: 1.953rem;
-}
-
-h4 {
-  font-size: 1.563rem;
-}
-
-h5 {
-  font-size: 1.25rem;
-}
-
-p {
-  font-size: 1rem;
-}
-
-@media screen and (max-width: 750px) {
-  .content {
-    overflow: hidden;
-    width: 100%;
-  }
-  .entry-content {
-    width: 100%;
-  }
+.entry-content #advertising .advertising-list div {
+  margin: 5px;
 }
 
 .entry-content h4 {
