--- a/2021-05/css/suiyoubino_neko.css
+++ b/2021-05/css/suiyoubino_neko.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 /* はてなブログのデザインcss */
+.entry-content #mainvisual img {
+  width: 100%;
+}
+
 .entry-content .official-anchor {
   margin: 20px auto;
   display: block;
@@ -18,7 +22,7 @@
           align-items: center;
   text-decoration: none;
   width: 70%;
-  height: 40px;
+  padding: 10px 0;
   background: #9f4aed;
   color: #fff;
 }
