--- a/2021-05/css/super-dry.css
+++ b/2021-05/css/super-dry.css
@@ -22,7 +22,7 @@
           align-items: center;
   text-decoration: none;
   width: 70%;
-  height: 40px;
+  padding: 10px 0;
   background: #9f4aed;
   color: #fff;
 }
